[package]
name = "diri"
version = "0.1.0"
edition = "2021"

[dependencies]
niri-ipc = "25.11"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
users = "0.11.0"
regex = "1.12.3"
